# SWRollCaclulator

./: AcingDie.cpp  AcingDie.h  AdderObject.cpp  AdderObject.h  BranchObject.cpp  BranchObject.h  CMakeLists.txt  ConstantObject.h  FlatMod.cpp  FlatMod.h  MaxConnector.cpp  MaxConnector.h  README  README.md  RaiseCounter.cpp  RaiseCounter.h  SWTraitRoll.cpp  SWTraitRoll.h  StochasticObject.h  WoundCalculatorObject.cpp  WoundCalculatorObject.h  main.cpp  main_attack.cpp
qtInterface/: CMakeLists.txt  InfoWindow.cpp  InfoWindow.h  MainQtWindow.cpp  MainQtWindow.h  OptionsMenu.cpp  OptionsMenu.h  RollCompositionWidget.cpp  RollCompositionWidget.h  main.cpp
